<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userSettings">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_account_circle_24_green"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/helloName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/hello"
            android:textColor="@color/busto_green"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/youHaveXWarnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/helloName" />

        <TextView
            android:id="@+id/changeInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/change_your_information"
            android:textColor="@color/busto_green"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/imageView3"
            />

        <EditText
            android:id="@+id/emailWrite"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:hint="@string/email"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@+id/changeInfoTextView" />

        <EditText
            android:id="@+id/oldPasswordWrite"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundedcorner"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/emailWrite"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/newPasswordWrite"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundedcorner"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/oldPasswordWrite"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/passwordConfWrite"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundedcorner"
            android:hint="@string/new_password_again"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordWrite"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/cardIDTextInput"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundedcorner"
            android:hint="@string/card_id"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfWrite"
            tools:layout_editor_absoluteX="-13dp" />

        <Button
            android:id="@+id/setButSave"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#4E6B3F"
            android:text="@string/save"
            app:cornerRadius="20dp"
            android:onClick="saveChanges"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/setButDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardIDTextInput"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/setButDelete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="#CD3232"
            android:text="@string/delete_account"
            android:onClick="deleteAccount"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setButSave" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>