<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/UserIconDescirption"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_directions_bus_24" />
    <TextView
        android:id="@+id/logoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BUSTOP"
        android:textAlignment="textStart"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/busto_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView"


        />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundedcorner"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:padding="4dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTextView"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundedcorner"
        android:inputType="textPassword"
        android:padding="4dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/password"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textSize="14sp"
        android:backgroundTint="#4E6B3F"
        android:onClick="login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/no_account_yet"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textSize="14sp"
        android:textColor="@color/busto_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:onClick="toRegister"
        android:clickable="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>