<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:paddingHorizontal="10dp"
            android:textColor="@color/busto_green"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />
        <!--
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/registerTextView" />
        -->
        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedcorner"
            android:hint="@string/email"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/registerTextView"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <!--
        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" />
            -->
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundedcorner"
            android:hint="@string/password"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
        <!--
        <TextView
            android:id="@+id/passwordConfirmationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/confirm_password"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />
            -->
        <EditText
            android:id="@+id/PasswordConfirmationInput"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundedcorner"
            android:hint="@string/confirm_password"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/cardIdInput"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundedcorner"
            android:hint="@string/card_id"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/PasswordConfirmationInput"
            android:inputType="text"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/termsAgreementCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/i_agree_to_terms_and_conditions"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="73dp"
            app:layout_constraintTop_toBottomOf="@+id/cardIdInput"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="#4E6B3F"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@+id/termsAgreementCheckBox"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>