<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StopsList">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:contentDescription="Bus image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_directions_bus_24" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="48dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/bus_number"
        android:textSize="38dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="214dp"
        android:layout_height="37dp"
        android:layout_marginTop="13dp"
        android:text="@string/line_name"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:contentDescription="star icon"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/textView21"
        app:srcCompat="@android:drawable/btn_star" />

    <Button
        android:id="@+id/button2"
        android:layout_width="210dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:text="@string/stop_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stoplist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="116dp"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button2" />


</androidx.constraintlayout.widget.ConstraintLayout>